@@ -37,6 +37,8 @@ version 2.10.0 (MM/DD/YYYY):
 
 	MSN:
 	* Fix seemingly random crashing. (#14307)
+	* Fix a crash when the account is disconnected at the time we are doing a
+	  SB request. (Hanzz, ported by shlomif) (#12431)
 
 	XMPP:
 	* Do not generate malformed XML ("</>") when setting an empty mood.
